--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
 					<form id="search_form" class="form-inline" action="">
 			<div class="form-group">
 				<label for="search-word" class="ontrol-label">Search</label> <input
-					type="text" class="form-control" id="search-word"> <label
+					type="text" class="form-control" class="replace" id="replace-from"> <label
 					for="replace-word" class="control-label">Replace</label> <input
-					type="text" class="form-control" id="replace-word"> <label>
+					type="text" class="form-control" class="replace" id="replace-to"> <label>
 					<input type="checkbox" id="chkgrep">正規表現を使う
-					
 				</label>
 			</div>
 		</form>
